# snallygaster

./: .gitignore  .travis.yml  CONTRIBUTIONS.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  TESTS.md  pyproject.toml  requirements.txt  runpyci.sh  setup.py  snallygaster
.github/workflows/: codeql-analysis.yml  codeql.xml  codeql.yml  runpyci.yml  runtests  runtests.yml
tests/: test_codingstyle.py  test_docs.py  test_scan_testdata.py
